--- a/KotlinBasic/app/src/main/res/values/strings.xml
+++ b/KotlinBasic/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KotlinBasic</string>
+    <string name="title_activity_maps">MapsActivity</string>
 </resources>
